2006-10-25 Braden McDaniel  <braden@endoframe.com>

	* doc/openvrml-gtkplug.texi: Fixed URL reference to the patch
	manager.

2006-10-25 Braden McDaniel  <braden@endoframe.com>

	* README: Marked --enable-script-node-java configure option as
	unsupported.

2006-10-25 Braden McDaniel  <braden@endoframe.com>

	* README: Updated package directory layout to reflect update to
	Visual C++ 8.0 project files.

2006-10-25 Braden McDaniel  <braden@endoframe.com>

	Accommodate building against Firefox development headers.

	* configure.ac: First look for firefox-js; fall back to
	mozilla-js.
	* openvrml.spec.in: Depend on firefox instead of mozilla.
	* mozilla-plugin/configure.ac: First look for firefox-plugin; fall
	back to mozilla-plugin.

2006-10-23 Braden McDaniel  <braden@endoframe.com>

	Moved the URI grammar to private.h so that it can be used by
	multiple implementation files.

	* src/libopenvrml/private.h: Moved URI grammar to here.
	* src/libopenvrml/openvrml/browser.cpp: Removed URI grammar (moved
	to private.h).  Removed openvrml::node_metatype_id
	implementation (moved to node.cpp).
	* src/libopenvrml/openvrml/node.cpp: Moved
	openvrml::node_metatype_id implementation to here.

2006-10-18 Braden McDaniel  <braden@endoframe.com>

	Fixed some residual uses of the openvrml::mat4f constructor.

	* src/libopenvrml/openvrml/vrml97node.cpp
	(viewpoint_node::do_relocate()): Use make_mat4f instead of mat4f's
	default constructor.
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(openvrml::gl::viewer::reset_user_navigation()): Use make_mat4f
	instead of mat4f's default constructor.

2006-10-12 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml.cpp
	(NPP_SetWindow(NPP, NPWindow *)): Catch std::runtime_error.
	(plugin_instance::set_window(NPWindow &)): Throw
	std::runtime_error in response to failures from GLib functions.

2006-10-12 Braden McDaniel  <braden@endoframe.com>

	* mozilla-plugin/src/openvrml.cpp